# rdt

./: .gitignore  .pre-commit-config.yaml  README copy.md  README.md  conftest.py  pyproject.toml  spec.md
src/rdt/: __init__.py  cli.py  config.py  console.py  context.py  init.py  runner.py
src/rdt/commands/: _apt.py  _ros.py  build.py  deps.py  doc.py  docker.py  info.py  init.py  test.py
src/rdt/core/: __init__.py  config.py  console.py  models.py  runner.py
src/rdt/recipes/: __init__.py  base.py
src/rdt/recipes/ros2/: __init__.py  ci.py  commands.py  demo.py  local.py  models.py
src/rdt/recipes/ros2/templates/: Dockerfile  Dockerfile-etherlab  __init__.py  config.yaml  defaults.yaml
src/rdt/recipes/ros2/templates/init/devcontainer/.devcontainer/: Dockerfile  devcontainer.json
src/rdt/recipes/ros2/templates/init/github/.github/workflows/: ci.yml
src/rdt/recipes/ros2/templates/init/gitlab/: .gitlab-ci.yml
src/rdt/recipes/ros2/templates/init/pre-commit/: .pre-commit-config.yaml
src/rdt/recipes/ros2/templates/init/repos/: PROJECT_NAME.repos
src/rdt/templates/: Dockerfile  config.yaml
src/rdt/templates/init/devcontainer/.devcontainer/: Dockerfile  devcontainer.json
src/rdt/templates/init/github/.github/workflows/: ci.yml
src/rdt/templates/init/gitlab/: .gitlab-ci.yml
src/rdt/templates/init/pre-commit/: .pre-commit-config.yaml
src/rdt/templates/init/repos/: PROJECT_NAME.repos
tests/: test_cli.py  test_config.py  test_context.py  test_models.py  test_ros_helpers.py  test_runner.py
